<resources>
    <string name="app_name">SketchApp</string>
    <string name="by_daniel_nguyen">By Daniel Nguyen</string>
    <string name="sketch">Sketch</string>
    <string name="gallery">Gallery</string>
    <string name="info">Info</string>
    <string name="undo">Undo</string>
    <string name="save">Save</string>
    <string name="colour">Colour</string>
    <string name="stroke">Stroke</string>
    <string name="black_colour">#000000</string>
    <string name="erase">Erase</string>
    <string name="bucket">Paint Bucket</string>
    <string name="clear">Clear Screen</string>
    <string name="about_app_info">SketchApp is a sketching and/or drawing Android application.
        The tools that you can use and interact with are buttons such as undo, redo, zoom/drag,
        save, change stroke colour, change stroke size, erase, change canvas colour, resizing canvas,
        and clear the canvas. The application saves the drawing into the Gallery,
        where you can delete, edit, or save the drawing to your phone. Have fun sketching!
    </string>
    <string name="about_sketchapp">About SketchApp</string>
    <string name="about_me">About Me</string>
    <string name="resource_links">https://www.iconfinder.com/icons/6609330/brush_cartoon_paint_paintbrush_stain_stationery_stroke_icon <br/><br/>
        https://github.com/jaredrummler/ColorPicker
    </string>
    <string name="resources">Resources</string>
    <string name="about_me_txt">I am a current student at Simon Fraser University studying for my BSc in Computing Science. <br/>
        SketchApp is one of my independent projects. You can see more of my projects, or learn more about me through the links below: <br/>
    </string>
    <string name="links">https://github.com/danielvnguyen \n<br/>
        https://www.linkedin.com/in/daniel-v-nguyen \n<br/>
        https://www.danielvnguyen.com
    </string>
    <string name="redo">Redo</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="choose_width_height">Set Canvas Width/Height: \n<br/>(Min: 50, Max: 4000, Or Leave Blank)</string>
    <string name="zoom">Zoom</string>
    <string name="done">Done</string>
    <string name="width">width</string>
    <string name="height">height</string>
</resources>