<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SketchScreen">


    <ImageButton
        android:id="@+id/undoBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/undo_arrow"
        android:text="@string/undo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveBtn"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/saveBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/save"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/bucketBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:src="@drawable/paint_tool"
        android:text="@string/bucket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eraserBtn"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/eraserBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:src="@drawable/eraser_tool"
        android:text="@string/erase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/strokeBtn"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/strokeBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:src="@drawable/paintbrush"
        android:text="@string/stroke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/colourBtn"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/colourBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_colour"
        android:text="@string/colour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/redoBtn"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/clearBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/clear_btn"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bucketBtn"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/redoBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/redo_arrow"
        android:text="@string/redo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/undoBtn"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rangebar"
        android:layout_width="410.5dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/strokeBtn"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <com.example.sketchapp.Model.DrawView
        android:id="@+id/draw_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/rangebar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>