<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.MainMenu">

    <Button
        android:id="@+id/sketchBtn"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/dark_gray"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/sketch"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/infoBtn"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/dark_gray"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/info"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightTV"
        app:layout_constraintVertical_bias="0.282" />

    <EditText
        android:id="@+id/heightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:background="@color/white"
        android:ems="4"
        android:fontFamily="@font/raleway_bold"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/height"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/askDimensionsTV"
        app:layout_constraintVertical_bias="0.108"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/widthTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:background="@color/white"
        android:ems="4"
        android:fontFamily="@font/raleway_bold"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/width"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/askDimensionsTV"
        app:layout_constraintVertical_bias="0.108"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toTopOf="@+id/sketchBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/banner"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/askDimensionsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/choose_width_height"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sketchBtn"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>